creusot/tests/should_fail/prusti/invalid_state/post_logic.stderr
error: 'post can only be used in specifications of program functions
 --> post_logic.rs:5:9
  |
5 | fn test<'post>(x: u32) -> u32 {
  |         ^^^^^

error: aborting due to 1 previous error

